[workspace]
members = ["crawler", "sha1_cracker", "tricoder"]

[workspace.package]
name = "toolkit"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Wright"]
rust-version = "1.75.0"

[workspace.registeries.crates-io]
protocol = "sparse"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "3.2", features = ["cargo"] }
env_logger = "0.11.3"
fantoccini = { version = "0.19", default-features = false, features = ["rustls-tls"] }
futures = "0.3"
hex = "0.4.3"
log = "0.4"
regex = "1"
reqwest = { version = "0.12.4", features = ["json", "blocking", "rustls-tls"] }
select = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.10.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
trust-dns-resolver = "0.21"
url = "2"

[workspace.build]
target = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-gnu"]

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.release]
strip = true      # Automagically strip symbols from the library
opt-level = "z"   # Highest optimisation
lto = true        # Enable link time optimisation
codegen-units = 1 # Maximise size reduction optimisation
panic = 'abort'   # Aborts on panic