[package]
name = "tricoder"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[registeries.crates-io]
protocol.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
trust-dns-resolver.workspace = true

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.release]
strip = true      # Automagically strip symbols from the library
opt-level = "z"   # Highest optimisation
lto = true        # Enable link time optimisation
codegen-units = 1 # Maximise size reduction optimisation
panic = 'abort'   # Aborts on panic
