[package]
name = "tricoder"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[registeries.crates-io]
protocol.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
env_logger.workspace = true
futures.workspace = true
log.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
trust-dns-resolver.workspace = true
url.workspace = true

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.release]
strip = true      # Automagically strip symbols from the library
opt-level = "z"   # Highest optimisation
lto = true        # Enable link time optimisation
codegen-units = 1 # Maximise size reduction optimisation
panic = 'abort'   # Aborts on panic
